<resources>
    <string name="app_name">Actsoft</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="covidform_title">Page One</string>
    <string name="covidform_subtitle">Please fill out all the information bellow</string>
    <string name="employee_name">Employee Name</string>
    <string name="temperature">Temperature</string>
    <string name="symptoms_title">Have you experienced any of the following symptoms</string>
    <string name="fever">Fever</string>
    <string name="coughing">Coughing</string>
    <string name="vomiting">Vomiting</string>

    <string name="no_symptoms">No Symptoms</string>
    <string name="none_of_above">None of above</string>

    <string name="submit">Submit</string>
    <string name="draft">Draft</string>
    <string name="material_request_title">Material Request Form</string>
    <string name="job_name">Job Name</string>
    <string name="job_number">Job Number</string>
    <string name="material_needed">Material Needed</string>
    <string name="quantity">Quantity</string>
    <string name="needed_by">Needed by</string>
    <string name="materials_request">Materials Request</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="default_title">Actsoft\'s Account</string>

    <string name="time_keeping">Time Keeping</string>
    <string name="return_to_work">Return to work</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="BrainsMenuItems">
        <item>Dispatching</item>
        <item>Messaging</item>
        <item>Time Keeping</item>
        <item>Crew Time Set</item>
        <item>Materials Request</item>
        <item>My Transfers</item>
        <item>Workflow Test</item>
        <item>Test for Fields</item>
        <item>COVID Test</item>
    </string-array>

</resources>
